# py-tree-sitter

./: pyproject.toml  setup.py
.github/workflows/: pypi.yml
tree_sitter/: __init__.py
